--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,4 @@
 version: 2.1
-parameters:
-  workflow:
-    type: string
-    default: "system"
 
 # This build step checks out the code from the repository. It has a hardcoded readonly key to allow the checkout.
 # Initially it just fetches the repo metadata for the current commit hash to a depth of 50 commits.
@@ -16,11 +12,6 @@ checkout: &checkout
       mkdir -p .ssh
       chmod 0700 .ssh
       ssh-keyscan -t rsa github.com >> .ssh/known_hosts
-
-      # A read only key for cloning the repository.
-      echo $GIT_CHECKOUT_KEY | base64 -d > .ssh/id_rsa
-
-      chmod 0600 .ssh/id_rsa
 
       # IF YOU'RE CHANGING THIS, YOU ALSO WANT TO CHANGE: build-system/remote_build/remote_build
       # Shallow checkout this commit.
@@ -55,8 +46,8 @@ jobs:
           command: build contracts
 
 workflows:
-  system:
-    when:
-      equal: [system, << pipeline.parameters.workflow >>]
+  build:
     jobs:
-      - contracts
+      - contracts:
+          context:
+            - build
